# WIHD

./: .gitignore  README.md  setup_dependencies.sh
MATLAB/: lqr_test.m  morphing_main_mk2.m
MATLAB/lib/: RPY2Rot.m  RPY2Rot_derivative.m  morphing_mk2.m
ROS2_ws/src/morphing_description/: CMakeLists.txt  package.xml
ROS2_ws/src/morphing_description/launch/: morphing_drone_launch.py
ROS2_ws/src/morphing_description/model/: Morphing_drone.sdf  model.config
ROS2_ws/src/morphing_description/model/stl/: body_link.stl  flare_link.stl  prop_link.stl  tilt_link.stl
ROS2_ws/src/morphing_drone_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ROS2_ws/src/morphing_drone_control/launch/: control_system.launch.py
ROS2_ws/src/morphing_drone_control/morphing_drone_control/: drone_model.py  fault_detection.py  guidance_manager.py  kalman_filter.py  main_controller_node.py  mode_controller.py  motor_controller.py  rpy2rot.py  rpy2rot_derivative.py
ROS2_ws/src/motor_speeds_pub/: CMakeLists.txt  package.xml
ROS2_ws/src/motor_speeds_pub/src/: motor_speeds_pub.cpp
